@@ -2064,8 +2064,8 @@ Imports and returns a new PNG image object.  C<$file> may be either a filename o
 
 Note: PNG files that include an alpha (transparency) channel go through a
 relatively slow process of separating the transparency channel into a PDF SMask
-object.  Install Image::PNG::Libpng and the libpng library to speed this up by
-an order of magnitude.
+object.  Install PDF::API2::XS or Image::PNG::Libpng to speed this up by an
+order of magnitude.
 
 =cut
 
